:recycle: JDK 모듈 접근 허용 설정 추가